# playwright-python-ecommerce-testing-framework

./: .env.example  .gitignore  Makefile  README.md  README_PARALLEL.md  conftest.py  main.py  pyproject.toml  run_tests.py  test_google.py  test_playwright.py
components/: alert.py  articles.py  author_content.py  base_component.py  billing_address_form.py  carousel.py  cart_panel.py  comment_form.py  contact_form.py  header_actions.py  navbar_horizontal.py  notification.py  quick_view_modal.py  related_articles.py  related_products.py  review_form.py  search_bar.py  sidebar_navigation.py  submit_button.py  top_collection.py  top_products.py
pages/: account_edit_page.py  account_page.py  article_page.py  base_page.py  checkout_page.py  confirm_order_page.py  google_search_page.py  home_page.py  login_page.py  product_page.py  register_page.py  search_page.py  shopping_cart_page.py  success_page.py  wishlist_page.py
tests/: base_test.py  test_google.py  test_homepage.py
tests/articles/: test_articles.py
tests/auth/: test_account_edit.py  test_login.py  test_register.py
tests/carousel/: test_main_carousel.py
tests/cart/: test_cart.py
tests/cart/top_collection/: test_add_to_cart.py
tests/checkout/: test_checkout.py
tests/navbar_horizontal/: test_navbar_horizontal.py
tests/product/: test_product.py
tests/quick_view/: test_quick_view.py
tests/search/: test_search.py
tests/wishlist/: README.md  test_wish_list.py  test_wishlist_page.py
utils/: config.py  data_generator.py
