[project]
name = "practicing-playwright-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.51.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "Faker>=18.4.0"
]

[tool.pytest.ini_options]
markers = [
    "cart: tests relacionados con el carrito de compras",
]
